--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -201,8 +201,8 @@ input[type="radio"] {
   float: left;
   clear: left;
   margin-bottom: $space-none;
-  margin-right: rem-calc($space-sm);
-  margin-top: rem-calc($space-xs);
+  margin-right: $space-sm;
+  margin-top: $space-xs;
   
   + label {
     font-weight: 300;
