private-design-output: add table package

--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -22,4 +22,5 @@
 @use 'pane/src/scss/component' as pane;
 @use 'sections/src/scss/component' as sections;
 @use 'site-header/src/scss/component' as site-header;
+@use 'table/src/scss/component' as table;
 @use 'tabs/src/scss/component' as tabs;
