--- a/packages/storybook-html/src/components/alert/alert.html
+++ b/packages/storybook-html/src/components/alert/alert.html
@@ -82,8 +82,8 @@
 </div>
 <br/>
 
-<div class="row">
-  <div class="column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <div class="alert alert--default alert--slim" role="alert">
       <div class="alert__message">
         Lorem ipsum dolor sit amet, <strong>I am a --slim alert.</strong>, sed do eiusmod tempor 
