--- a/packages/storybook-html/src/components/card/card.html
+++ b/packages/storybook-html/src/components/card/card.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="column large-3 medium-6 ">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/st-lucia">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9492/stlucia-card.jpg')">
         <div class="card__header"></div>
@@ -18,7 +18,7 @@
       </div>
     </a>
   </div>
-  <div class="column large-3 medium-6 ">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/gatton">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
         <div class="card__header"></div>
@@ -37,7 +37,7 @@
       </div>
     </a>
   </div>
-  <div class="column large-3 medium-6 ">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/herston">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9480/herston-card.jpg')">
         <div class="card__header"></div>
@@ -56,7 +56,7 @@
       </div>
     </a>
   </div>
-  <div class="column large-3 medium-6  end ">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/other-locations">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9779/moreton-island2.jpg')">
         <div class="card__header"></div>
@@ -77,8 +77,8 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="columns large-4 medium-6 small-12">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card">
       <div class="card__header"></div>
       <div class="card__body">
@@ -101,7 +101,7 @@
       <div class="card__footer"></div>
     </div>
   </div>
-  <div class="columns large-4 medium-6 small-12">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card">
       <div class="card__header"></div>
       <div class="card__body">
@@ -124,7 +124,7 @@
       <div class="card__footer"></div>
     </div>
   </div>
-  <div class="columns large-4 medium-6 small-12">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card">
       <div class="card__header"></div>
       <div class="card__body">
@@ -148,8 +148,9 @@
     </div>
   </div>
 </div>
-<div class="row">
-  <div class="columns large-4 medium-6 small-12">
+
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card">
       <div class="card__header"></div>
       <div class="card__body">
@@ -181,7 +182,7 @@
       </div>
     </div>
   </div>
-  <div class="columns large-4 medium-6 small-12">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card">
       <div class="card__header"></div>
       <div class="card__body">
@@ -213,7 +214,7 @@
       </div>
     </div>
   </div>
-  <div class="columns large-4 medium-6 small-12">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card">
       <div class="card__header"></div>
       <div class="card__body">
@@ -246,9 +247,10 @@
     </div>
   </div>
 </div>
-<div class="row" data-equalizer data-equalizer-mq="medium-up">
-  <div class="columns large-4 medium-6 small-12">
-    <div class="card card--background-image card--square" data-equalizer-watch style="background-image: url('//lorempixel.com/800/800');">
+
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
+    <div class="card card--background-image card--square" style="background-image: url('//lorempixel.com/800/800');">
       <div class="card__header"></div>
       <div class="card__body">
         <div class="card__content">
@@ -266,8 +268,8 @@
       <div class="card__footer"></div>
     </div>
   </div>
-  <div class="columns large-4 medium-6 small-12">
-    <div class="card card--background-image card--square" data-equalizer-watch style="background-image: url('//lorempixel.com/800/800');">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
+    <div class="card card--background-image card--square" style="background-image: url('//lorempixel.com/800/800');">
       <div class="card__header"></div>
       <div class="card__body">
         <div class="card__content">
@@ -285,8 +287,8 @@
       <div class="card__footer"></div>
     </div>
   </div>
-  <div class="columns large-4 medium-6 small-12">
-    <div class="card card--background-image card--square" data-equalizer-watch style="background-image: url('//lorempixel.com/800/800');">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
+    <div class="card card--background-image card--square" style="background-image: url('//lorempixel.com/800/800');">
       <div class="card__header"></div>
       <div class="card__body">
         <div class="card__content">
@@ -307,6 +309,7 @@
     </div>
   </div>
 </div>
+
 <div class="row">
   <div class="columns small-12">
     <div class="card card--background-image card--portrait" style="background-image: url('//lorempixel.com/800/800');">
@@ -327,8 +330,8 @@
     </div>
   </div>
 </div>
-<div class="row">
-  <div class="columns small-12">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <div class="card card--background-image card--landscape" style="background-image: url('//lorempixel.com/800/800');">
       <div class="card__header"></div>
       <div class="card__body">
@@ -347,15 +350,16 @@
     </div>
   </div>
 </div>
-<div class="row collapse card card--horizontal">
-  <div class="card__header columns medium-6 small-12">
+
+<div class="uq-grid card card--horizontal">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 card__header">
     <a class="card__link" href="#">
       <div class="card__image-container">
         <img class="card__image" src="https://lorempixel.com/800/800"/>
       </div>
     </a>
   </div>
-  <div class="card__body columns medium-6 small-12">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 card__body">
     <div class="card__content">
       <h2 class="card__title">
         <a class="card__link" href="#">Title of item</a>
@@ -364,15 +368,16 @@
     </div>
   </div>
 </div>
-<div class="row collapse card card--horizontal card--shaded">
-  <div class="card__header columns medium-6 small-12">
+
+<div class="uq-grid card card--horizontal card--shaded">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 card__header">
     <a class="card__link" href="#">
       <div class="card__image-container">
         <img class="card__image" src="https://lorempixel.com/800/800"/>
       </div>
     </a>
   </div>
-  <div class="card__body columns medium-6 small-12">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 card__body">
     <div class="card__content">
       <h2 class="card__title">
         <a class="card__link" href="#">Title of item</a>
@@ -381,15 +386,16 @@
     </div>
   </div>
 </div>
-<div class="row collapse card card--horizontal card--media-right">
-  <div class="card__header columns medium-6 small-12">
+
+<div class="uq-grid card card--horizontal card--media-right">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 card__header">
     <a class="card__link" href="#">
       <div class="card__image-container">
         <img class="card__image" src="https://lorempixel.com/800/800"/>
       </div>
     </a>
   </div>
-  <div class="card__body columns medium-6 small-12">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 card__body">
     <div class="card__content">
       <h2 class="card__title">
         <a class="card__link" href="#">Title of item</a>
