header: search box focussed when search icon gets clicked (desktop)

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -377,4 +377,9 @@
         margin: core.$space-none;
         padding: core.$space-none;
     }
+
+    // JS helpers: 
+    &__mq--desktop {
+        font-family: "#{fnd-global.$large-up}";
+    }
 }
