storybook-html, private-design-output: remove unnecessary id's from global header

--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -24,8 +24,8 @@
           </nav>
       </div>
       <div class="nav-search">
-          <form class="nav-search__form" action="https://www.uq.edu.au/search/" method="get" id="uq-search" accept-charset="UTF-8">
-              <fieldset id="edit-as-sitesearch--wrapper" class="nav-search__wrapper">
+          <form class="nav-search__form" action="https://www.uq.edu.au/search/" method="get" accept-charset="UTF-8">
+              <fieldset class="nav-search__wrapper">
                   <legend class="hidden">
                       <span class="nav-search__title">What are you looking for?</span>
                   </legend>
@@ -48,7 +48,7 @@
                       <label for="edit-q" class="visually-hidden">Search term</label>
                       <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="search-query__input">
                       <span class="search-query__button">
-                          <input type="submit" id="edit-submit--2" name="op" value="Search" class="search-query__submit">
+                          <input type="submit" name="op" value="Search" class="search-query__submit">
                       </span>
                   </span>
               </div>
