storybook-html, private-design-output: reconciliation statement link in footer

--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -1,10 +1,8 @@
 <footer class="uq-footer" data-gtm-category="Footer">
     <div class="uq-footer__container">
-  
         <div class="uq-footer__acknowledgement">
-            UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="" class="uq-footer__acknowledgement__link">Reconciliation statement</a>
+            UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__acknowledgement__link">Reconciliation statement</a>
         </div>
-  
         <div class="uq-footer__row">
             <div class="uq-footer__column">
                 <div class="uq-footer__copyright">© The University of Queensland</div>
@@ -23,7 +21,6 @@
                 </div>
             </div>
         </div>
-      
         <div class="uq-footer__footer">
             <div class="uq-footer__row">
                 <div class="uq-footer__column">
@@ -49,6 +46,5 @@
                 </div>
             </div>
         </div>
-  
     </div>
 </footer>
