--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -547,11 +547,9 @@
 <!-- footer -->
 <footer class="uq-footer" data-gtm-category="Footer">
   <div class="uq-footer__container">
-
       <div class="uq-footer__acknowledgement">
-          UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="" class="uq-footer__acknowledgement__link">Reconciliation statement</a>
+          UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__acknowledgement__link">Reconciliation statement</a>
       </div>
-
       <div class="uq-footer__row">
           <div class="uq-footer__column">
               <div class="uq-footer__copyright">© The University of Queensland</div>
@@ -570,7 +568,6 @@
               </div>
           </div>
       </div>
-    
       <div class="uq-footer__footer">
           <div class="uq-footer__row">
               <div class="uq-footer__column">
@@ -596,6 +593,5 @@
               </div>
           </div>
       </div>
-
   </div>
 </footer>
