site-header: mobile menu toggle hover style property update

--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -66,6 +66,11 @@
     text-indent: -100vw;
     width: 1.5rem;
 
+    &:hover {
+      background-color: core.$uq-white;
+      color: core.$uq-purple;
+    }
+
     &:focus {
       outline: 2px solid core.$link;
       outline-offset: 0;
