--- a/packages/storybook-html/src/docs/layout/layout.scss
+++ b/packages/storybook-html/src/docs/layout/layout.scss
@@ -51,6 +51,13 @@
         width: 100%;
       }
 
+      @media #{core.$screen-xs-up} {
+        > span {
+          background-color: lighten(core.$uq-yellow, 35%);
+          border-color: core.$uq-yellow;
+        }
+      }
+
       @media #{core.$screen-sm-up} {
         > span {
           background-color: lighten(core.$uq-orange, 35%);
